Spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,9 @@ h3 {
     .row {
         margin: 5% 5% 5% 5%;
     }
+    .course {
+        padding-top: 50px;
+    }
 } 
 
 /*---------------- campus ----------------*/
@@ -322,6 +325,12 @@ h3 {
     margin-bottom: 5px;
     text-align: left;
     padding: 10px;
+}
+
+@media(max-width:700px) {
+    .facility {
+        padding-top: 50px;
+    }
 }
 
 /*---------------- testimonials ------------------*/
@@ -412,7 +421,7 @@ h3 {
 @media(max-width:700px) {
     .cta h1 {
         font-size: 20px;
-        padding: 100px 10px 10px 10px;
+        padding: 60px 10px 10px 10px;
     }
 }
 /*--------------Footer---------------*/
